Pull request #23: AGRE-2951: Implement Visit overview redesign
Merge in ITX-BPV/openmrs-module-visits from feature/AGRE-2951-2 to development

Squashed commit of the following:

commit d13e4cf5b8e094fb5a47b9f7e59e392af036fc81
Author: Piotr Wargulak <pwargulak@soldevelo.com>
Date:   Mon Jun 5 10:06:24 2023 +0200

    AGRE-2951: Implement Visit overview redesign

    - general and patient's visit overview share the same component
